Initial updates to support Merlin1

--- a/arch/arm/boot/dts/imx6q-merlin1.dts
+++ b/arch/arm/boot/dts/imx6q-merlin1.dts
@@ -16,7 +16,7 @@
 #include "imx6qdl-merlin1.dtsi"
 
 / {
-	model = "Freescale i.MX6 Quad SABRE Smart Device Board";
+	model = "Datavideo Merlin1 Board";
 	compatible = "fsl,imx6q-sabresd", "fsl,imx6q";
 };
 
